# nanumsa_alembic

./: pyproject.toml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 2d36887203ab_add_share_item_id_seq.py  47dfaf207af4_add_user_id_seq_sequence.py  9a237e861a09_init_schema.py
src/versions/: 31832085c8c5_change_kakao_user_id_to_bigint.py
